objects/blood_coor__c.object
<CustomObject>
    <description>case study</description>
    <label>blood coordination</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Blood Coordinater</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>blood coordinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Blood_Donor__c</fullName>
        <description>case study</description>
        <inlineHelpText>Blood Donor list</inlineHelpText>
        <label>Donor  Name</label>
        <referenceTo>Blood_Donor__c</referenceTo>
        <relationshipLabel>blood coordinations</relationshipLabel>
        <relationshipName>blood_coordinations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Blood_request__c</fullName>
        <description>case study</description>
        <inlineHelpText>Patient Lists</inlineHelpText>
        <label>Patient Name</label>
        <referenceTo>Blood_request__c</referenceTo>
        <relationshipLabel>blood coordinations</relationshipLabel>
        <relationshipName>blood_coordinations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attender_Contact__c</fullName>
        <description>case study</description>
        <formula>Blood_request__r.Attender_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attender Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Blood_group__c</fullName>
        <formula>TEXT(Blood_Donor__r.Blood_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Blood group</label>
        <type>Text</type>
    </fields>
</CustomObject>